[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.352941, 0.0117647, 0.0117647, 0 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Sections"]
anchor_top = 0.08
anchor_right = 0.25
anchor_bottom = 0.08
margin_top = -3.2
margin_bottom = 51.8
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sections/CenterContainer"]
margin_left = 41.0
margin_top = 20.0
margin_right = 224.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "BlockChain Mining Game"
align = 1
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="Sections"]
anchor_top = 0.6
anchor_right = 0.25
anchor_bottom = 1.0
margin_top = -71.0
margin_right = -10.0
margin_bottom = -40.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Sections/Buttons"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 256.0
margin_bottom = 14.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Play"

[node name="Settings" type="Button" parent="Sections/Buttons"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 18.0
margin_right = 256.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Settings"

[node name="Help" type="Button" parent="Sections/Buttons"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 36.0
margin_right = 256.0
margin_bottom = 50.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Help"

[node name="Exit" type="Button" parent="Sections/Buttons"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 54.0
margin_right = 256.0
margin_bottom = 68.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Exit"

[connection signal="pressed" from="Sections/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Sections/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Sections/Buttons/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Sections/Buttons/Exit" to="." method="_on_Exit_pressed"]
